Fix scrollbar handle placement when the scrollbar uses a padding.

--- a/tests/style/default.css
+++ b/tests/style/default.css
@@ -72,6 +72,7 @@ NbtkTable NbtkButton {
 
 NbtkScrollBar {
   background-color: darkgrey;
+  padding: 2;
 }
 
 NbtkScrollBar *#trough {
